--- a/kfc_template/css/recruit_detail.css
+++ b/kfc_template/css/recruit_detail.css
@@ -20,7 +20,7 @@
 
 /* 動物の写真 */
 .cover{
-    text-align: center;
+justify-content: center;
 }
 .flex{
     display: flex;
@@ -33,4 +33,8 @@
 .flex li img{
     height: 170px;
     object-fit: cover;
+}
+.flex li img:hover{
+    cursor: pointer;
+opacity: 0.8;
 }
