--- a/kfc_template/css/recruit_detail.css
+++ b/kfc_template/css/recruit_detail.css
@@ -28,6 +28,7 @@ justify-content: center;
 .main-frame img{
     object-fit: cover;
     height: 400px;
+    width: 100%;
     max-height: 100%;
 }
 .flex{
