--- a/kfc_template/css/recruit_detail.css
+++ b/kfc_template/css/recruit_detail.css
@@ -32,6 +32,7 @@ justify-content: center;
     max-height: 100%;
 }
 .flex{
+    padding: 0;
     display: flex;
     justify-content: space-between;
 }
