--- a/kfc_template/css/recruit_detail.css
+++ b/kfc_template/css/recruit_detail.css
@@ -27,8 +27,8 @@ justify-content: center;
 }
 .main-frame img{
     object-fit: cover;
-    /* height: 400px;
-    max-width: 100%;
+     height: 400px;
+    /* max-width: 100%; 
     max-height: 100%; */
 }
 .flex{
