--- a/kfc_template/css/recruit_detail.css
+++ b/kfc_template/css/recruit_detail.css
@@ -28,8 +28,8 @@ justify-content: center;
 .main-frame img{
     object-fit: cover;
      height: 400px;
-    /* max-width: 100%; 
-    max-height: 100%; */
+    width: 100%; 
+    max-height: 100%;
 }
 .flex{
     padding: 0;
