--- a/kfc_template/css/recruit_detail.css
+++ b/kfc_template/css/recruit_detail.css
@@ -2,15 +2,18 @@
 
 /* タイトル */
 .recruit_ttl{
-	display: flex;
+	/* display: flex;
     justify-content: space-between;
     align-items: flex-start;
-    flex-shrink: 0;
+    flex-shrink: 0; */
     border-bottom: 1px dotted #ccc;
     margin-bottom: 40px;
 }
-.recruit_ttl h2{
-    margin: 0px 30px 10px 0;
+h2.r_title{
+    border-bottom: 1px dotted #ccc;
+    margin-bottom: 22px;
+    padding-bottom: 12px;
+    margin-right: 0;
 }
 @media screen and (max-width:700px) {
     .recruit_ttl h2{
@@ -27,6 +30,7 @@
     border: 2px solid #f44336;
     border-radius: 50px;
     transition: 0.3s;
+    margin-bottom: 30px;
 }
 .btn-good:hover {
     color: #fff;
