--- a/kfc_template/css/recruit_detail.css
+++ b/kfc_template/css/recruit_detail.css
@@ -2,10 +2,6 @@
 
 /* タイトル */
 .recruit_ttl{
-	/* display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    flex-shrink: 0; */
     border-bottom: 1px dotted #ccc;
     margin-bottom: 40px;
 }
@@ -51,7 +47,7 @@ h2.r_title{
 
 /* 動物の写真 */
 #cover{
-    width: 90%; /* 追記：画像サムネエリア全体の横幅 */
+    width: 90%; /* 画像サムネエリア全体の横幅 */
     margin-left: auto;
     margin-right: auto;
 }
@@ -64,16 +60,16 @@ h2.r_title{
 .main-frame img{
     object-fit: cover;
     height: 600px;
-    width: 100%; /*width: 90%;*/ 
+    width: 100%; 
     max-height: 100%;
 }
 .flex{
     padding: 0;
     display: flex;
     justify-content: space-between;
-    margin: 0px 0 30px 0; /* 追記 */
-    background: #f1f1f1; /* 追記 */
-    padding: 1rem 1rem; /* 追記 */
+    margin: 0px 0 30px 0; 
+    background: #f1f1f1; 
+    padding: 1rem 1rem; 
 }
 .flex li{
     width: calc(100% / 3);
@@ -81,7 +77,6 @@ h2.r_title{
     text-align: center;
 }
 .flex li img{
-    /* width: 100%; 追記 */
     height: 170px;
     object-fit: cover;
 }
